--- a/coplimeClientWeb/web/index.xhtml
+++ b/coplimeClientWeb/web/index.xhtml
@@ -22,11 +22,14 @@
                         <p:commandButton action="enviarAvisoIncidencia" value="Generar aviso" type="button"/>
                     </p:dataList>
                     <p:dataList type="inset" styleClass="ui-li-custom">
-                        <f:facet name="header">Inicio de sesión</f:facet>
-                        <f:attribute name="icon" value="false" />
-                        <p:inputText label="Nombre de usuario" />
-                        <p:inputText label="contraseña:" />
-                        <p:commandButton value="Iniciar sesión" type="button"/>
+                        <h:form>
+                            <f:facet name="header">Inicio de sesión</f:facet>
+                            <f:attribute name="icon" value="false" />
+                            <p:outputLabel>#{Autenticador.outputMsj}</p:outputLabel>
+                            <p:inputText label="Nombre de usuario" value="#{Autenticador.username}" required="true"/>
+                            <p:inputText type="password" label="contraseña:" value="#{Autenticador.password}" required="true"/>
+                            <p:commandButton value="Iniciar sesión" action="#{Autenticador.login}"/>
+                        </h:form>
                     </p:dataList>
                 </p:outputPanel>
             </pm:content>
