--- a/coplimeClientWeb/web/crearAdmin.xhtml
+++ b/coplimeClientWeb/web/crearAdmin.xhtml
@@ -18,16 +18,17 @@
                 <h:form>
                 <p:outputPanel>
                     <p:dataList type="inset" styleClass="ui-li-custom">
-                        <f:facet name="header">Inicio de sesión</f:facet>
+                        <f:facet name="header">Ingrese datos del administrador</f:facet>
                         <f:attribute name="icon" value="false" />
                         <p:inputText label="Nombre:" value="#{creacionAdministrador.nombre}" required="true"/>
                         <p:inputText label="Apellido paterno:" value="#{creacionAdministrador.apellido1}" required="true"/>
                         <p:inputText label="Apellido materno:" value="#{creacionAdministrador.apellido2}" required="true"/>
                         <p:inputText label="mail" value="#{creacionAdministrador.mail}" required="true"/>
+                        <p:inputText label="Teléfono" value="#{creacionAdministrador.telefono}"/>
                         
                         <p:inputText label="Nombre de usuario" value="#{creacionAdministrador.username}" required="true"/>
                         <p:inputText label="contraseña:" type="password" value="#{creacionAdministrador.password}" required="true"/>
-                        <p:commandButton value="Crear administrador" action="#{creacionAdministrador.nuevoAdministrador()}"/>
+                        <p:commandButton value="Crear administrador" action="#{creacionAdministrador.agregarAdministrador()}"/>
                     </p:dataList>
                 </p:outputPanel>
                 </h:form>
