Avancen enviar aviso de incidencia

--- a/coplime_client_web/web/index.xhtml
+++ b/coplime_client_web/web/index.xhtml
@@ -13,24 +13,24 @@
     <pm:page title="Bienvenido a COPLIME">
         <!-- Main View -->
         <pm:view id="main">
-            <pm:header title="Bienvenido a COPLIME" swatch="b"/>
+            <pm:header title="Bienvenido a COPLIME"/>
             <pm:content>
                 <p:outputPanel>
-                    <p:dataList type="inset" styleClass="ui-li-custom">
-                        <f:facet name="header">Avisar incidencia</f:facet>
-                        <f:attribute name="icon" value="false" />
-                        <p:commandButton action="enviarAvisoIncidencia" value="Generar aviso" type="button"/>
-                    </p:dataList>
-                    <p:dataList type="inset" styleClass="ui-li-custom">
-                        <h:form>
+                    <h:form>
+                        <p:dataList type="inset" styleClass="ui-li-custom">
+                            <f:facet name="header">Avisar incidencia</f:facet>
+                            <f:attribute name="icon" value="false" />
+                            <p:commandButton immediate="true" action="#{Autenticador.goToEnviarAvisoIncidencia()}" value="Generar aviso" />
+                        </p:dataList>
+                        <p:dataList type="inset" styleClass="ui-li-custom">
                             <f:facet name="header">Inicio de sesión</f:facet>
                             <f:attribute name="icon" value="false" />
                             <p:outputLabel>#{Autenticador.outputMsj}</p:outputLabel>
                             <p:inputText label="Nombre de usuario" value="#{Autenticador.username}" required="true"/>
                             <p:inputText type="password" label="contraseña:" value="#{Autenticador.password}" required="true"/>
                             <p:commandButton value="Iniciar sesión" action="#{Autenticador.login()}"/>
-                        </h:form>
-                    </p:dataList>
+                        </p:dataList>
+                    </h:form>
                 </p:outputPanel>
             </pm:content>
         </pm:view>
