avances en enviar aviso de incidencia 3
Falta almacenar el archivo adjunto y mostrar algún mensaje de "ha
ocurrido satisfactoriamente..."

--- a/coplime_client_web/web/enviarAvisoIncidencia.xhtml
+++ b/coplime_client_web/web/enviarAvisoIncidencia.xhtml
@@ -49,7 +49,7 @@
                         </pm:field>
                         
                         <pm:buttonGroup>
-                            <p:commandButton value="Enviar" action="#{enviarAvisoIncidenciaManagedBeans.enviarAviso()}"/>
+                            <p:commandButton value="Enviar"  ajax="false" action="#{enviarAvisoIncidenciaManagedBeans.enviarAviso()}"/>
                             <p:commandButton value="Cancelar" />
                         </pm:buttonGroup>
                         
