enviar aviso de incidencia funcional
Falta mejorar los mensajes de "satisfactorio" u "error"

--- a/coplime_client_web/web/enviarAvisoIncidencia.xhtml
+++ b/coplime_client_web/web/enviarAvisoIncidencia.xhtml
@@ -58,6 +58,17 @@
                 </p:outputPanel>
             </pm:content>
         </pm:view>
+        
+        <pm:view id="success" title="Aviso de incidencia enviado">
+            <pm:header title="Aviso de incidencia enviado">
+                <f:facet name="left">
+                    <p:commandButton value="Ir al inicio" icon="back" onclick="window.location='../';" />
+                </f:facet>
+            </pm:header>
+            <pm:content>
+                El aviso ha sido enviado satisfactoriamente
+            </pm:content>
+        </pm:view>
     </pm:page>
 
 </f:view>
