--- a/coplime_client_web/web/index.xhtml
+++ b/coplime_client_web/web/index.xhtml
@@ -15,12 +15,12 @@
         <pm:view id="main">
             <pm:header title="Bienvenido a COPLIME"/>
             <pm:content>
-                <h:form>
                     <p:dataList type="inset" styleClass="ui-li-custom">
                         <f:facet name="header">Avisar incidencia</f:facet>
                         <f:attribute name="icon" value="false" />
-                        <p:commandButton immediate="true" action="#{Autenticador.goToEnviarAvisoIncidencia()}" value="Generar aviso" />
+                        <p:button href="faces/enviarAvisoIncidencia.xhtml" value="Generar aviso"/>
                     </p:dataList>
+                <h:form>
                     <p:dataList type="inset" styleClass="ui-li-custom">
                         <f:facet name="header">Inicio de sesión</f:facet>
                         <f:attribute name="icon" value="false" />
