empezando cambio de pass

--- a/coplime_client_web/web/pobladoInicial.xhtml
+++ b/coplime_client_web/web/pobladoInicial.xhtml
@@ -13,7 +13,7 @@
     <pm:page title="Agregar punto limpio">
         <!-- Main View -->
         <pm:view id="main">
-            <pm:header title="Poblado inicial" swatch="b"/>
+            <pm:header title="Poblado inicial"/>
             <pm:content>
                 <h:form>
                 <p:outputPanel>
