--- a/coplime_client_web/web/resources/ezcomp/menuInspector.xhtml
+++ b/coplime_client_web/web/resources/ezcomp/menuInspector.xhtml
@@ -20,6 +20,7 @@
             <f:facet name="header">Menu para Inspector
                 <h:outputLabel value="#{Autenticador.username}"/>
             </f:facet>
+            <h:outputLink value="/faces/users/infoUsuario.xhtml">Información del usuario</h:outputLink>
             <h:outputLink value="/faces/users/verPuntosLimpios.xhtml">Ver puntos limpios</h:outputLink>
             <h:outputLink value="/faces/users/verNotificaciones.xhtml">Ver notificaciones<h:outputText styleClass="ui-li-count" value="6"/></h:outputLink>
             <h:outputLink value="/faces/users/verSolicitudesMantencion.xhtml">Ver solicitudes de mantención</h:outputLink>
