--- a/coplime_client_web/web/index.xhtml
+++ b/coplime_client_web/web/index.xhtml
@@ -18,13 +18,13 @@
                     <p:dataList type="inset" styleClass="ui-li-custom">
                         <f:facet name="header">Avisar incidencia</f:facet>
                         <f:attribute name="icon" value="false" />
-                        <p:button href="faces/enviarAvisoIncidencia.xhtml" value="Generar aviso"/>
+                        <p:commandButton onclick="window.location='/faces/enviarAvisoIncidencia.xhtml';" value="Generar aviso"/>
                     </p:dataList>
                 <h:form>
                     <p:dataList type="inset" styleClass="ui-li-custom">
                         <f:facet name="header">Inicio de sesión</f:facet>
                         <f:attribute name="icon" value="false" />
-                        <p:outputLabel>#{Autenticador.outputMsj}</p:outputLabel>
+                        <p:outputLabel id="labelMensaje"/>
                         <p:inputText label="Nombre de usuario" value="#{Autenticador.username}" required="true"/>
                         <p:inputText type="password" label="contraseña:" value="#{Autenticador.password}" required="true"/>
                         <p:commandButton value="Iniciar sesión" action="#{Autenticador.login()}"/>
