--- a/coplime_client_web/web/index.xhtml
+++ b/coplime_client_web/web/index.xhtml
@@ -15,11 +15,13 @@
         <pm:view id="main">
             <pm:header title="Bienvenido a COPLIME"/>
             <pm:content>
+                <h:form>
                     <p:dataList type="inset" styleClass="ui-li-custom">
                         <f:facet name="header">Avisar incidencia</f:facet>
                         <f:attribute name="icon" value="false" />
-                        <p:commandButton onclick="window.location='/faces/enviarAvisoIncidencia.xhtml';" value="Generar aviso"/>
+                        <p:commandButton immediate="true" value="Generar aviso" action="#{Autenticador.goToEnviarAvisoIncidencia()}"/>
                     </p:dataList>
+                </h:form>
                 <h:form>
                     <p:dataList type="inset" styleClass="ui-li-custom">
                         <f:facet name="header">Inicio de sesión</f:facet>
