--- a/coplime_client_web/web/enviarAvisoIncidencia.xhtml
+++ b/coplime_client_web/web/enviarAvisoIncidencia.xhtml
@@ -49,8 +49,8 @@
                         </pm:field>
                         
                         <pm:buttonGroup>
-                            <p:commandButton value="Enviar"  ajax="false" action="#{enviarAvisoIncidenciaManagedBeans.enviarAviso()}"/>
-                            <p:commandButton value="Cancelar" />
+                            <p:commandButton value="Enviar" ajax="false" action="#{enviarAvisoIncidenciaManagedBeans.enviarAviso()}"/>
+                            <p:commandButton immediate="true" value="Cancelar" action="#{enviarAvisoIncidenciaManagedBeans.goToIndex()}"/>
                         </pm:buttonGroup>
                         
                     </p:dataList>
@@ -62,7 +62,7 @@
         <pm:view id="success" title="Aviso de incidencia enviado">
             <pm:header title="Aviso de incidencia enviado">
                 <f:facet name="left">
-                    <p:commandButton value="Ir al inicio" icon="back" onclick="window.location='../';" />
+                    <p:commandButton value="Ir al inicio" icon="back" action="#{enviarAvisoIncidenciaManagedBeans.goToIndex()}" />
                 </f:facet>
             </pm:header>
             <pm:content>
