Avance editar y eliminar operario e inspec
-ya se cargan los datos en los editar de operario e inspector. Inspector
en teroria deberia estar funcionando el eliminar y editar pero da atado
cuando ocupo el usuariodao solucionando eso estaria ok esa parte
- puse el estandar de direccionamiento
-correccion de vistas de editar, faltaba el parametro telefono

--- a/coplime_client_web/web/admin/editarInspector.xhtml
+++ b/coplime_client_web/web/admin/editarInspector.xhtml
@@ -41,8 +41,9 @@
                         <p:inputText label="Apellido paterno" value="#{mantenedorInspector.apellido1}"/>
                         <p:inputText label="Apellido materno" value="#{mantenedorInspector.apellido2}"/>
                         <p:inputText label="Nombre de usuario" value="#{mantenedorInspector.username}"/>
-                        <p:selectBooleanCheckbox label="Reiniciar contraseña" value="false"></p:selectBooleanCheckbox>
+                        <p:selectBooleanCheckbox label="Reiniciar contraseña" value="#{mantenedorInspector.checkContraseña}"></p:selectBooleanCheckbox>
                         <p:inputText label="E-mail" value="#{mantenedorInspector.mail}"/>
+                        <p:inputText label="Teléfono" value="#{mantenedorInspector.telefono}"/>
                         <p:commandButton value="Guardar" action="#{mantenedorInspector.guardarCambiosInspector()}"/>
                         <p:commandButton value="Volver" action="#{mantenedorInspector.volver()}"/>
                     </p:dataList>
