posible ver notificaciones de incidencia en menu

--- a/coplime_client_web/web/resources/ezcomp/menuOperario.xhtml
+++ b/coplime_client_web/web/resources/ezcomp/menuOperario.xhtml
@@ -22,7 +22,7 @@
             </f:facet>
             <h:outputLink value="/faces/users/infoUsuario.xhtml">Información del usuario</h:outputLink>
             <h:outputLink value="/faces/users/verPuntosLimpios.xhtml">Ver puntos limpios</h:outputLink>
-            <h:outputLink value="/faces/users/verNotificaciones.xhtml">Ver notificaciones<h:outputText styleClass="ui-li-count" value="6"/></h:outputLink>
+            <h:outputLink value="/faces/users/verNotificaciones.xhtml">Ver notificaciones<h:outputText styleClass="ui-li-count" value="#{notificacionesManagedBeans.cantidadNotificaciones}"/></h:outputLink>
             <h:outputLink value="/faces/users/verSolicitudesMantencion.xhtml">Ver solicitudes de mantención</h:outputLink>
             <h:outputLink value="/faces/users/verOperariosMantencion.xhtml">Ver operarios de mantención</h:outputLink>
             <h:outputLink value="/faces/users/verInspectores.xhtml">Ver inspectores</h:outputLink>
