--- a/coplime_client_web/web/resources/ezcomp/menuInspector.xhtml
+++ b/coplime_client_web/web/resources/ezcomp/menuInspector.xhtml
@@ -22,11 +22,12 @@
             </f:facet>
             <h:outputLink value="/faces/users/infoUsuario.xhtml">Información del usuario</h:outputLink>
             <h:outputLink value="/faces/users/verPuntosLimpios.xhtml">Ver puntos limpios</h:outputLink>
-            <h:outputLink value="/faces/users/verNotificaciones.xhtml">Ver notificaciones<h:outputText styleClass="ui-li-count" value="6"/></h:outputLink>
+            <h:outputLink value="/faces/users/verNotificaciones.xhtml">Ver notificaciones<h:outputText styleClass="ui-li-count" value="#{notificacionesManagedBeans.cantidadNotificaciones}"/></h:outputLink>
             <h:outputLink value="/faces/users/verSolicitudesMantencion.xhtml">Ver solicitudes de mantención</h:outputLink>
             <h:outputLink value="/faces/users/verOperariosMantencion.xhtml">Ver operarios de mantención</h:outputLink>
             <h:outputLink value="/faces/users/verInspectores.xhtml">Ver inspectores</h:outputLink>
             <h:outputLink value="/faces/users/agregarRevisionPuntoLimpio.xhtml">Agregar revisión de punto limpio</h:outputLink>
+            <h:outputLink value="/faces/users/solicitarMantencionPuntoLimpio.xhtml">Agregar revisión de punto limpio</h:outputLink>
             <h:outputLink >Generar reportes</h:outputLink>
             <h:outputLink >Ayuda</h:outputLink>
             <h:outputLink value="/faces/users/logout.xhtml">Cerrar sesión</h:outputLink>
