tratando de usar conversationScoped

--- a/coplime_client_web/web/index.xhtml
+++ b/coplime_client_web/web/index.xhtml
@@ -19,6 +19,9 @@
                     <p:dataList type="inset" styleClass="ui-li-custom">
                         <f:facet name="header">Avisar incidencia</f:facet>
                         <f:attribute name="icon" value="false" />
+                        Si usted es un usuario de un punto limpio y se encuentra con que existe algún problema,
+                        es de gran utilidad que lo informe para tener un mejor servicio y así lograr mantener
+                        en buen estado los puntos limpios siempre.
                         <p:commandButton immediate="true" value="Generar aviso" action="#{Autenticador.goToEnviarAvisoIncidencia()}"/>
                     </p:dataList>
                 </h:form>
