--- a/coplime_client_web/web/selectPtoLimpioAviso.xhtml
+++ b/coplime_client_web/web/selectPtoLimpioAviso.xhtml
@@ -17,7 +17,7 @@
             <h:form>
             <pm:header title="Seleccione un punto limpio">
                 <f:facet name="left">
-                    <p:commandButton value="Ir al inicio" icon="back" action="#{enviarAvisoIncidenciaManagedBeans.goToIndex()}" />
+                    <p:commandButton value="Ir al inicio" icon="back" action="#{Autenticador.goToIndex()}" />
                 </f:facet>
             </pm:header>
             <pm:content>
