--- a/coplime_client_web/web/enviarAvisoIncidencia.xhtml
+++ b/coplime_client_web/web/enviarAvisoIncidencia.xhtml
@@ -14,11 +14,13 @@
     <pm:page title="Enviar aviso de incidencia">
         <!-- Main View -->
         <pm:view id="main">
+            <h:form>
             <pm:header title="Enviar aviso de incidencia">
                 <f:facet name="left">
                     <p:commandButton value="Ir al inicio" icon="back" action="#{Autenticador.goToIndex()}" />
                 </f:facet>
             </pm:header>
+            </h:form>
 
             <pm:content>
                 <h:form  enctype="multipart/form-data">
@@ -47,11 +49,11 @@
                                           required="false"/> 
                         </pm:field>
                         
-                        <p:captcha label="Captcha"/>
+                        <p:captcha label="Captcha" theme="white" language="es"/>
                         
                         <pm:buttonGroup>
                             <p:commandButton value="Enviar" ajax="false" action="#{enviarAvisoIncidenciaManagedBeans.enviarAviso()}"/>
-                            <p:commandButton immediate="true" value="Cancelar" action="#{enviarAvisoIncidenciaManagedBeans.goToIndex()}"/>
+                            <p:commandButton immediate="true" value="Cancelar" action="#{Autenticador.goToIndex()}"/>
                         </pm:buttonGroup>
                     </p:dataList>
                 </h:form>
